# mcp-search

./: .gitignore  README.md  pyproject.toml
src/mcp_search/: __init__.py  args.py  deps.py  reader.py  server.py
